# My-LLM-Digital-Twin

./: README.md  debug_pipeline.py  pyproject.toml  test_crawl.py  test_query_pipeline_correct.py
.zen/: config.yaml
configs/: chris.yaml
llm_engineering/: settings.py
llm_engineering/application/crawlers/: base.py  custom_article.py  github.py  github.py.backup  medium.py
llm_engineering/application/preprocessing/: chunking_data_handlers.py
llm_engineering/application/utils/: __init__.py  split_user_full_name.py
llm_engineering/domain/: chunks.py  dataset.py  documents.py  embedded_chunks.py  exceptions.py  types.py
llm_engineering/domain/base/: __init__.py  nosql.py  vector.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  jsondiff  jsonpatch  jsonpointer
pipelines/: digital_twin_etl.py  digital_twin_etl_force_fresh.py  digital_twin_etl_fresh.py  digital_twin_etl_no_cache.py  feature_engineering.py  test_pipeline.py
src/: main.py
src/steps/: get_or_create_user.py
src/steps/etl/: crawl_links.py  get_or_create_user.py
steps/: __init__.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
tests/: test_fixed_crawl.py  test_odm.py
tests/unit/: manual_tests.py
