[tool.poetry]
name = "my-llm-digital-twin"
version = "0.1.0"
description = "My LLM Digital Twin built from scratch for research"
authors = ["cmorris2945 <cmorris2945@yahoo.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.1.1"
numpy = "^2.3.3"
pandas = "^2.3.2"
openai = "^1.107.3"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.13.5"
selenium = "^4.35.0"
scikit-learn = "^1.7.2"
transformers = "^4.56.1"
pymongo = "^4.15.0"
qdrant-client = "^1.15.1"
comet-ml = "^3.52.1"
wandb = "^0.21.4"
loguru = "^0.7.2"
typing-extensions = "^4.12.2"
zenml = "^0.85.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic = "^2.0.0"
chromedriver-autoinstaller = "^0.6.0"  # Automatically installs ChromeDriver for Selenium program to run.
tqdm = "^4.66.0" 
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
sentence-transformers = "^2.2.0"
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
ruff = "^0.13.0"
pre-commit = "^4.3.0"
poethepoet = "^0.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
# Development tasks
test = "pytest tests/"
format-check = "black --check src/"
format-fix = "black src/"
lint-check = "ruff check src/"
lint-fix = "ruff check --fix src/"
run-digital-etl-chris = "zenml pipeline run --config configs/chris.yaml"
zenml-status = "zenml status"
zenml-init = "zenml init"

# Run the main application
run = "python src/main.py"

# Setup tasks
setup-pre-commit = "pre-commit install"